# Joni

./: .env.example  .gitignore  FORSCHUNGSTAGEBUCH.md  Makefile  README.md  RELAY.md  commissions_done.json  pyproject.toml
.github/workflows/: autonomy.yml  compact.yml  joni-auftrag.yml  live-deepseek.yml
backups/pre-llm-2026-06-15/: README.md
backups/pre-llm-2026-06-15/docs/: data.json
backups/pre-llm-2026-06-15/state/: extensions.json  forum_outbox.json  forum_replies.txt  joni_state.json
docs/: CORE_REBUILD_PLAN.md  GOVERNANCE_LOCK_SCOPE_AUDIT.md  LAYER9.md  LAYER9_BASELINE_CANDIDATE.md  METHOD_SANDBOX_AUFTRAG.md  METHOD_TRIAL_RECORDED.md  PROTECTION_ZONES.md  SOFTWARE_REVIEW_2026-06-16.md  TECH_DEBT.md  TRIAL_EVENT_HASHES.md  TRIAL_EVENT_PROJECTOR.md  TRIAL_EVENT_REPLAY_NOTES.md  data.json  index.html  layer9.html  layer9_v2_sqlite.md  sqlite_migration.md  to_post.md
inbox/: README.md
protocol/: protocol.archive-2026-06-16-pre-week.jsonl  protocol.jsonl
scripts/: bootstrap_relay.sh  enable_moltbook.sh  fix_python311.sh  install_stagedigger.sh  install_stagedigger_backend.sh  live_smoke.py  mirror_memory.sh
shadow/: .gitignore  README.md  hook.py  ledger_shadow.py  ontology_coverage_shadow.py  router_shadow.py  slice_quality_shadow.py
src/desi_layer9/: __init__.py  base.py  core.py  enums.py  hashing.py  ids.py  ledger.py  migration.py  objects.py  persistence.py  policy.py  provenance.py  rules.py  snapshot.py  taint.py  transitions.py  trial_event_validation.py
src/joni/: __init__.py  api.py  cli.py  conflict.py  creativity.py  desi_link.py  epistemics.py  identity.py  loops.py  memory.py  model_client.py  models.py  operators.py  persistence.py  renderer.py  router.py  seed.py  state.py
state/: asks_new.json  budget.json  commissions_new.json  ext_disabled.json  extensions.json  forum_inbox.json  forum_outbox.json  joni_state.json  layer9.json  router_shadow.jsonl  run_window.json
state/model_calls/: calls.jsonl
tests/: conftest.py  semantic_stub.py  test_api.py  test_architecture_invariants.py  test_ask_structure.py  test_autonomy_budget.py  test_autonomy_governance.py  test_autonomy_improve.py  test_autonomy_run.py  test_commission.py  test_conflict.py  test_creativity.py  test_desi_link.py  test_desi_semantic_integration.py  test_documents.py  test_doktores.py  test_embedding_decision.py  test_emerge.py  test_epistemic_gap_projector.py  test_epistemic_hygiene.py  test_epistemics_integration.py  test_escalation.py  test_experts.py  test_extension_review.py  test_facets.py  test_homeostasis.py  test_humans.py  test_identity.py  test_introspect.py  test_invent_github.py  test_kevin_creative.py  test_kevin_llm.py  test_layer9_adversarial.py  test_layer9_compaction.py  test_layer9_gate.py  test_layer9_governance_hardening.py  test_layer9_incremental_hash.py  test_layer9_ledger_migration.py  test_layer9_replay_ticks.py  test_layer9_schema.py  (+37 more)
tests/layer9_v2/: test_adapters.py  test_checkpoint.py  test_convert.py  test_journal.py  test_legacy_import.py  test_links_and_overlays.py  test_runtime_desi_store.py  test_slice_scan.py  test_spaces.py  test_storage.py  test_subject.py
tests/shadow/: test_ontology_coverage_shadow.py
(+96 files in other folders)
