[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "joni"
version = "0.1.0"
description = "Joni - a DESi-based operative identity: appears like a person, stays fully dissolvable into controlled state."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Hanns-Steffen Rentschler" }]
keywords = ["DESi", "epistemic-state", "operative-identity", "audit-ledger", "model-routing"]
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.0"]
# Plug in the real DESi routing engine + tool registry (used when JONI_USE_DESI=1).
desi = ["desi-governance @ git+https://github.com/hstre/DESi"]
web = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2.0", "httpx>=0.27"]
dev = ["pytest>=8.0", "ruff>=0.5", "fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2.0", "httpx>=0.27"]

[project.scripts]
joni = "joni.cli:main"
joni-serve = "joni.api:serve"
joni-autonomy = "joni.autonomy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
joni = ["web/*.html"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
